Fix vertical alignment of dropdown menu indicator icon

--- a/src/styles/sidebar/components/menu.scss
+++ b/src/styles/sidebar/components/menu.scss
@@ -10,6 +10,7 @@
   padding: 0;
   color: inherit;
   display: flex;
+  align-items: center;
 }
 
 .menu__toggle-icon {
